--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,17 @@ img {
   color: #fff;
 }
 
+/* Esconder o conteúdo dos tabs inicialmente */
+#tab-1-content,
+#tab-2-content,
+#tab-3-content {
+  display: none;
+}
+
+.show {
+  display: block !important;
+}
+
 #tab-1-content .tab-1-content-inner {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
